--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -1,4 +1,24 @@
-$page-color: #666;
+$page-color: #87CEFA;
+$shadow-alpha-main: 0.85;
+
+
+@mixin rounded($tl, $tr, $bl, $br) {
+  -webkit-border-radius:$tl $tr $br $bl;
+  -moz-border-radius: $tl $tr $br $bl;
+  border-radius: $tl $tr $br $bl;
+}
+
+@mixin shadow($offx, $offy, $blur, $spread, $alpha) {
+  -webkit-box-shadow:$offx $offy $blur $spread rgba(0,0,0, $alpha);
+  -moz-box-shadow:$offx $offy $blur $spread rgba(0,0,0, $alpha);
+  box-shadow:$offx $offy $blur $spread rgba(0,0,0, $alpha);
+}
+
+@mixin in-shadow($offx, $offy, $blur, $spread, $alpha) {
+  -webkit-box-shadow:inset $offx $offy $blur $spread rgba(0,0,0, $alpha);
+  -moz-box-shadow:inset $offx $offy $blur $spread rgba(0,0,0, $alpha);
+  box-shadow:inset $offx $offy $blur $spread rgba(0,0,0, $alpha);
+}
 
 .full-height {
   height: 100%;
@@ -8,12 +28,10 @@ $page-color: #666;
 html {
   @extend .full-height;
 	position: relative;
-	background-color: $page-color;
 }
 
 body {
 	@extend .full-height;
-  background-color: $page-color;
 }
 
 .container-fluid {
@@ -23,54 +41,81 @@ body {
 	right:0;
 	bottom:0;
 	overflow: hidden;
-}
 
-/* Remove the Editting Border */
-[contenteditable="true"] {
-	 border:none;
-	 outline:none;
+  padding:0;
+  margin:0;
 }
 
 /* Header */
 #header-row {
-	background-color: lighten($page-color, 10%);
+  margin:0;
+  padding:0;
+
+}
+
+#header-box {
+  @include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
+  @include rounded(0em, 0em, .25em, .25em);
+  border-bottom:1px solid black;
+
+  background-color: $page-color;
+
+  margin:0;
+  padding:0;
 
   h1 {
-    color:white;
-    font-size: 4vw;
-    margin:10px;
+    color: white;
+    margin:0;
+    padding:0.25em;
   }
 }
 
 /* Content */
 #content-row {
   @extend .full-height;
-	padding:1px;
+	padding:0;
+  margin:1em 0;
+
 }
 
-#main-body {
+#control-box {
+  margin:0;
+  padding:0;
+
   @extend .full-height;
-	background-color: #ccc;
+}
+
+#control-pane {
+  @include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
+  @include rounded(0, 0.25em, 0em, 0.25em);
+  border:1px solid black;
+  border-left:none;
+
+
+  padding:1em;
+  background-color: $page-color;
+
+  height:60ex;
+}
+
+
+#main-box {
+  @extend .full-height;
 	padding:0;
 	margin:0;
-
-  h3 {
-    font-size: 2vw;
-    padding-bottom: 10px;
-    margin: 10px 0px 0px 0px;
-    border-bottom: 1px solid black;
-  }
 }
 
-#document-box {
+#document-pane {
+  @include shadow(1px, 1px, 3px, 0px, $shadow-alpha-main);
+  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
+  border:1px solid black;
+
 	color:black;
-	background-color: #eee;
 
-	height:100%;
-	width:100%;
+  padding:1em;
+  margin:0 0.5em;
 
-	padding:2em;
-	resize:none;
+  height:60ex;
 
   &:focus {
     outline:none !important;
@@ -78,74 +123,46 @@ body {
 
 }
 
-#side-bar {
-	height:100%;
-	color:white;
-	padding:0;
-	background-color: lighten($page-color, 15%);
+#side-box {
+  @extend .full-height;
+  padding:0;
+  margin:0;
 }
 
-#stuff-box {
-	margin:0;
-  height:50%;
-  h1 {
-    margin: 10px 0 5px 0;
-    padding: 0 0 10px 0;
+#chat-pane {
+  @include shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+  @include rounded(0.25em, 0, 0.25em, 0);
+  border:1px solid black;
+  border-right:none;
 
-    border-bottom: 1px solid black;
 
-    color:white;
-    font-size: 2vw;
-  }
+  height:60ex;
 
-  button {
-    width:100%;
-    margin: {
-      bottom:1em;
-    }
-  }
+  background-color: $page-color;
+
+  padding:0;
+  margin:0;
 }
 
-#chat-box {
-	width: 100%;
-  height:100%;
+#chat-window {
+  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
+  @include in-shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
 
-	bottom:0px;
-	right: 0px;
-	left: 0px;
+  margin:0.5em 0.5em 0 0.5em;
+  overflow: auto;
 
-	margin: 0;
+  height:30ex;
 
-	background-color: lighten($page-color, 5%);
+  background-color: #eee;
 
-  h1 {
+}
 
-  	margin: 0 0 0 0;
-  	padding: 10px 0 10px 0;
+#chat-input {
+  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
+  border:1px solid black;
+  margin-top:0.5em;
+}
 
-  	border: {
-      bottom:1px solid black;
-      top:1px solid black;
-    };
-
-  	color:white;
-  	font-size: 2vw;
-
-  }
-
-  div {
-    clear:both;
-    font-size: 2vmin;
-    border: {
-      bottom:1px solid black;
-    }
-    padding: {
-      left:0.5em;
-      right:0.5em;
-    }
-  }
-
-  .other {
-    color: #aaa;
-  }
+.chat-message {
+  padding-left:0.25em;
 }
