--- a/public/css/test.css
+++ b/public/css/test.css
@@ -62,6 +62,9 @@ html {
   padding: 0;
   margin: 0; }
 
+#document-container {
+  margin: 0 0.5em; }
+
 #document-pane, #document-display {
   -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.85);
   -moz-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.85);
@@ -69,13 +72,13 @@ html {
   -webkit-border-radius: 0.25em 0.25em 0.25em 0.25em;
   -moz-border-radius: 0.25em 0.25em 0.25em 0.25em;
   border-radius: 0.25em 0.25em 0.25em 0.25em;
+  border: 1px solid black;
   white-space: pre;
   word-wrap: normal;
   overflow: auto;
-  border: 1px solid black;
+  padding: 1ex;
   color: black;
-  padding: 1em;
-  margin: 0 0.5em;
+  width: 100%;
   height: 60ex;
   resize: none; }
 
@@ -114,7 +117,18 @@ html {
   -moz-border-radius: 0.25em 0.25em 0.25em 0.25em;
   border-radius: 0.25em 0.25em 0.25em 0.25em;
   border: 1px solid black;
-  margin-top: 0.5em; }
+  margin: 0.5em 0.5em 0 0.5em;
+  width: 70%; }
+
+#chat-name-box {
+  margin: 0.5em 0.5em 0 0.5em;
+  width: 70%;
+  display: inline-block; }
+  #chat-name-box p {
+    display: inline-block; }
+  #chat-name-box #chat-name {
+    display: inline-block;
+    width: 70%; }
 
 .chat-message {
   padding-left: 0.25em; }
