--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -1,4 +1,4 @@
-$page-color: #87CEFA;
+$page-color: #03a2fe;
 $shadow-alpha-main: 0.85;
 
 
@@ -54,9 +54,9 @@ body {
 }
 
 #header-box {
-  @include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
-  @include rounded(0em, 0em, .25em, .25em);
-  border-bottom:1px solid black;
+  //@include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
+  //@include rounded(0em, 0em, 1em, 1em);
+  border-bottom:1px solid #9a9a9a;
 
   background-color: $page-color;
 
@@ -86,9 +86,9 @@ body {
 }
 
 #control-pane {
-  @include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
-  @include rounded(0, 0.25em, 0em, 0.25em);
-  border:1px solid black;
+  //@include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
+  @include rounded(0, 1em, 0em, 1em);
+  border:1px solid #9a9a9a;
   border-left:none;
 
 
@@ -101,7 +101,7 @@ body {
 
 #main-box {
   @extend .full-height;
-	padding:0;
+	padding:5;
 	margin:0;
 }
 
@@ -110,9 +110,9 @@ body {
 }
 
 #document-pane {
-  @include shadow(1px, 1px, 3px, 0px, $shadow-alpha-main);
-  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
-  border:1px solid black;
+  //@include shadow(1px, 1px, 3px, 0px, $shadow-alpha-main);
+  @include rounded(1em, 1em, 1em, 1em);
+  border:1px solid #9a9a9a;
 
   white-space: pre;
   word-wrap: normal;
@@ -120,10 +120,15 @@ body {
   overflow:auto;
   padding:1ex;
 
-	color:black;
+  color:black;
   width:100%;
   height:60ex;
   resize: none;
+	
+  &:focus {
+    outline: none !important;
+  	border:2px solid #9a9a9a;
+  }  
 
 }
 
@@ -138,9 +143,9 @@ body {
 }
 
 #chat-pane {
-  @include shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
-  @include rounded(0.25em, 0, 0.25em, 0);
-  border:1px solid black;
+  //@include shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+  @include rounded(1em, 0, 1em, 0);
+  border:1px solid #9a9a9a;
   border-right:none;
 
 
@@ -153,23 +158,45 @@ body {
 }
 
 #chat-window {
-  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
-  @include in-shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+  @include rounded(0.5em, 0.5em, 0, 0);
+  //@include in-shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+  border:1px solid #6f6f6f;
 
   margin:0.5em 0.5em 0 0.5em;
   overflow: auto;
+  word-wrap: break-word;
 
-  height:30ex;
+  height:34ex;
 
   background-color: #eee;
 
 }
+#joined-users-box {
+ @include rounded(1em, 0, 0, 0);
+  border:1px solid #9a9a9a;
+  border-right:none;
+  border-top:none;
+  border-left:none;
 
-#chat-input {
-  @include rounded(0.25em, 0.25em, 0.25em, 0.25em);
-  border:1px solid black;
-  margin:0.5em 0.5em 0 0.5em;
-  width: 70%;
+  padding:1em;
+  background-color: $page-color;
+
+  height:15ex;
+}
+
+#chat-input-box {
+ margin: -0.1em 0.5em 0 0.5em;
+  //display: inline-block;
+    #chat-input {
+    //display: inline-block;
+    @include rounded(0, 0, 0.5em, 0.5em);
+    border:1px solid #9a9a9a;
+    width:100%;
+    &:focus {
+    	outline: none !important;
+  		border:2px solid #9a9a9a;
+  	}
+  }
 }
 
 #chat-name-box {
@@ -183,6 +210,10 @@ body {
   #chat-name {
     display: inline-block;
     width:70%;
+    &:focus {
+    outline: none !important;
+  	border:2px solid #9a9a9a;
+  }  
   }
 }
 
