--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -50,7 +50,6 @@ body {
 #header-row {
   margin:0;
   padding:0;
-
 }
 
 #header-box {
@@ -62,11 +61,21 @@ body {
 
   margin:0;
   padding:0;
-
+  width:100%;
   h1 {
+    display:inline-block;
+
     color: white;
     margin:0;
     padding:0.25em;
+  }
+
+  h3 {
+    color:white;
+    margin:0;
+    padding:.25em;
+    display:inline-block;
+    float:right;
   }
 }
 
@@ -91,12 +100,34 @@ body {
   border:1px solid #9a9a9a;
   border-left:none;
 
+  width:100%;
 
-  padding:1em;
+  padding:0;
+  margin:0;
+
   background-color: $page-color;
 
   height:60ex;
+  display:table;
+  img {
+    display:block;
+    width:100%;
+    height:auto;
+  }
+  li {
+    display:table-row;
+
+    span {
+      color:white;
+      display:table-cell;
+      vertical-align: middle;
+    }
+    :first-child, :last-child {
+      height:10ex;
+    }
+  }
 }
+
 
 
 #main-box {
@@ -124,11 +155,11 @@ body {
   width:100%;
   height:60ex;
   resize: none;
-	
+
   &:focus {
     outline: none !important;
   	border:2px solid #9a9a9a;
-  }  
+  }
 
 }
 
@@ -172,16 +203,14 @@ body {
 
 }
 #joined-users-box {
- @include rounded(1em, 0, 0, 0);
-  border:1px solid #9a9a9a;
-  border-right:none;
-  border-top:none;
-  border-left:none;
-
-  padding:1em;
-  background-color: $page-color;
-
+  overflow: scroll;
+  overflow-x: hidden;
+  border-bottom: 1px solid black;
   height:15ex;
+
+  ul {
+    padding-left:20px;
+  }
 }
 
 #chat-input-box {
@@ -203,17 +232,12 @@ body {
   margin:0.5em 0.5em 0 0.5em;
   width:70%;
 
-  display: inline-block;
-  p {
-    display: inline-block;
-  }
   #chat-name {
-    display: inline-block;
     width:70%;
     &:focus {
-    outline: none !important;
-  	border:2px solid #9a9a9a;
-  }  
+      outline: none !important;
+    	border:2px solid #9a9a9a;
+    }
   }
 }
 
