--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,31 +1,21 @@
-.full-height, html, body, #content-row, #control-box, #main-box, #side-box {
+.full-height, html, body, .container-fluid, #control-col, #side-col {
   height: 100%;
   min-height: 100%; }
 
-html {
-  position: relative; }
-
 .container-fluid {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: hidden;
   padding: 0;
   margin: 0; }
 
 /* Header */
 #header-row {
-  margin: 0;
+  margin: 0 0 1em 0;
   padding: 0; }
 
 #header-box {
   border-bottom: 1px solid #9a9a9a;
   background-color: #03a2fe;
   margin: 0;
-  padding: 0;
-  width: 100%; }
+  padding: 0; }
   #header-box h1 {
     font-size: 3vw;
     color: white;
@@ -39,10 +29,11 @@ html {
 
 /* Content */
 #content-row {
+  height: 80%;
   padding: 0;
-  margin: 0 0; }
+  margin: 0; }
 
-#control-box {
+#control-col {
   margin: 0;
   padding: 0; }
 
@@ -53,9 +44,9 @@ html {
   border: 1px solid #9a9a9a;
   border-left: none;
   padding: 0;
-  margin: auto;
   background-color: #03a2fe;
   width: 100%;
+  height: 100%;
   display: table;
   overflow: hidden; }
   #control-pane li {
@@ -70,81 +61,89 @@ html {
         margin-left: auto !important;
         margin-right: auto !important; }
 
-#main-box {
+#document-col {
   padding: 0 1em;
-  margin: 0; }
+  margin: 0;
+  height: 100%; }
 
-#document-container {
-  margin: 0 0; }
+#document-pane {
+  margin: 0;
+  height: 100%; }
 
-#document-pane, #document-display {
+#document-textarea {
   -webkit-border-radius: 1em 1em 1em 1em;
   -moz-border-radius: 1em 1em 1em 1em;
   border-radius: 1em 1em 1em 1em;
   border: 1px solid #9a9a9a;
   white-space: pre;
   word-wrap: normal;
+  padding: 1em;
   overflow: auto;
   color: black;
   width: 100%;
-  height: 60ex;
+  height: 100%;
   resize: none; }
-  #document-pane:focus, #document-display:focus {
+  #document-textarea:focus {
     outline: none !important;
     border: 2px solid #9a9a9a; }
 
-#side-box {
+#side-col {
   padding: 0;
   margin: 0; }
 
-#chat-pane {
+#side-pane {
   -webkit-border-radius: 1em 0 0 1em;
   -moz-border-radius: 1em 0 0 1em;
   border-radius: 1em 0 0 1em;
+  height: 100%;
   border: 1px solid #9a9a9a;
   border-right: none;
   background-color: #03a2fe;
   padding: 0;
   margin: 0; }
 
-#joined-users-box {
-  border-bottom: 1px solid black;
-  margin: auto; }
-  #joined-users-box h1 {
-    margin: 0.5ex 0 0 0;
-    color: white; }
+#user-box {
+  height: 25%;
+  padding: 0.5em;
+  overflow-y: auto;
+  position: relative; }
+  #user-box h1 {
+    color: white;
+    padding: 0;
+    margin: 0; }
 
-#joined-users-list {
-  overflow-y: scroll;
-  max-height: 15ex; }
+#user-list {
+  height: calc(100% - 40px);
+  overflow-y: auto; }
+
+#chat-box {
+  height: 75%; }
 
 #chat-window {
-  -webkit-border-radius: 0.5em 0.5em 0 0;
-  -moz-border-radius: 0.5em 0.5em 0 0;
-  border-radius: 0.5em 0.5em 0 0;
+  -webkit-border-radius: 1em 0 0 0;
+  -moz-border-radius: 1em 0 0 0;
+  border-radius: 1em 0 0 0;
   border: 1px solid #9a9a9a;
-  margin: 0.5em 0.5em 0 0.5em;
   overflow: auto;
   word-wrap: break-word;
-  min-height: 12ex;
-  max-height: 34ex;
+  min-height: calc(100% - 2em + 1px);
+  max-height: calc(100% - 2em + 1px);
   background-color: #eee; }
 
-#chat-input-box {
-  margin: 0 0.5em 0.5em 0.5em; }
-  #chat-input-box #chat-input {
-    -webkit-border-radius: 0 0 0.5em 0.5em;
-    -moz-border-radius: 0 0 0.5em 0.5em;
-    border-radius: 0 0 0.5em 0.5em;
-    border: 1px solid #9a9a9a;
-    width: 100%; }
-    #chat-input-box #chat-input:focus {
-      outline: none !important;
-      border: 2px solid #9a9a9a; }
-
-#chat-name-box #chat-name:focus {
-  outline: none !important;
-  border: 2px solid #9a9a9a; }
+#chat-input {
+  -webkit-border-radius: 0 0 0 1em;
+  -moz-border-radius: 0 0 0 1em;
+  border-radius: 0 0 0 1em;
+  padding: 0.5em;
+  height: 2em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border: 1px solid #9a9a9a;
+  width: 100%; }
+  #chat-input:focus {
+    outline: none !important;
+    border: 2px solid #9a9a9a; }
 
 .chat-message {
   padding-left: 0.25em; }
