--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -28,41 +28,31 @@ $shadow-alpha-main: 0.85;
 
 html {
   @extend .full-height;
-	position: relative;
 }
 
 body {
-	@extend .full-height;
+  @extend .full-height;
 }
 
 .container-fluid {
-	position: absolute;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	overflow: hidden;
-
+  @extend .full-height;
   padding:0;
   margin:0;
 }
 
 /* Header */
 #header-row {
-  margin:0;
+  margin:0 0 1em 0;
   padding:0;
 }
 
 #header-box {
-  //@include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
-  //@include rounded(0em, 0em, 1em, 1em);
   border-bottom:1px solid $border-color;
 
   background-color: $page-color;
 
   margin:0;
   padding:0;
-  width:100%;
 
   h1 {
     font-size: 3vw;
@@ -81,33 +71,30 @@ body {
 
 /* Content */
 #content-row {
-  @extend .full-height;
+  height: 80%;
 	padding:0;
-  margin:0 0;
-
-
+  margin:0;
 }
 
-#control-box {
+#control-col {
+  @extend .full-height;
   margin:0;
   padding:0;
-
-  @extend .full-height;
 }
 
 #control-pane {
-  //@include shadow(2px, 2px, 2px, 0px, $shadow-alpha-main);
   @include rounded(0, 1em, 0em, 1em);
 
   border:1px solid $border-color;
   border-left:none;
 
   padding:0;
-  margin:auto;
 
   background-color:$page-color;
 
   width:100%;
+  height:100%;
+
   display:table;
 
   overflow: hidden;
@@ -132,19 +119,18 @@ body {
   }
 }
 
-
-
-#main-box {
-  @extend .full-height;
+#document-col {
 	padding:0 1em;
 	margin:0;
-}
-
-#document-container {
-  margin:0 0;
+  height:100%;
 }
 
 #document-pane {
+  margin:0;
+  height:100%;
+}
+
+#document-textarea {
   //@include shadow(1px, 1px, 3px, 0px, $shadow-alpha-main);
   @include rounded(1em, 1em, 1em, 1em);
   border:1px solid $border-color;
@@ -152,11 +138,13 @@ body {
   white-space: pre;
   word-wrap: normal;
 
+  padding:1em;
+
   overflow:auto;
 
   color:black;
   width:100%;
-  height:60ex;
+  height:100%;
   resize: none;
 
   &:focus {
@@ -166,19 +154,16 @@ body {
 
 }
 
-#document-display {
-  @extend #document-pane;
-}
-
-#side-box {
+#side-col {
   @extend .full-height;
   padding:0;
   margin:0;
 }
 
-#chat-pane {
-  //@include shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+#side-pane {
   @include rounded(1em, 0, 1em, 0);
+
+  height:100%;
   border:1px solid $border-color;
   border-right:none;
 
@@ -188,59 +173,56 @@ body {
   margin:0;
 }
 
-#joined-users-box {
-  border-bottom: 1px solid black;
-  margin: auto;
+#user-box {
+  height:25%;
+  padding:0.5em;
+  overflow-y: auto;
+  position: relative;
   h1 {
-    margin:0.5ex 0 0 0;
     color:white;
+    padding:0;
+    margin:0;
   }
-
 }
 
-#joined-users-list {
-  overflow-y: scroll;
-  max-height:15ex;
+#user-list {
+  height:calc(100% - 40px); // hacky bs
+  overflow-y: auto;
+}
+
+#chat-box {
+  height:75%;
 }
 
 #chat-window {
-  @include rounded(0.5em, 0.5em, 0, 0);
-  //@include in-shadow(1px, 1px, 3px, 1px, $shadow-alpha-main);
+  @include rounded(1em, 0, 0, 0);
   border:1px solid $border-color;
 
-  margin:0.5em 0.5em 0 0.5em;
   overflow: auto;
   word-wrap: break-word;
 
-  min-height:12ex;
-  max-height:34ex;
-
+  min-height:calc(100% - 2em + 1px);
+  max-height:calc(100% - 2em + 1px);
   background-color: #eee;
 
 }
 
-#chat-input-box {
- margin: 0 0.5em 0.5em 0.5em;
+#chat-input {
+  @include rounded(0, 0, 1em, 0);
 
-  #chat-input {
-    @include rounded(0, 0, 0.5em, 0.5em);
-    border:1px solid $border-color;
-    width:100%;
-    &:focus {
-    	outline: none !important;
-  		border:2px solid $border-color;
-  	}
-  }
-}
+  padding:0.5em;
 
-#chat-name-box {
+  height:2em;
+  position: absolute;
+  bottom:0;
+  left:0;
 
-  #chat-name {
-    &:focus {
-      outline: none !important;
-    	border:2px solid $border-color;
-    }
-  }
+  border:1px solid $border-color;
+  width:100%;
+  &:focus {
+  	outline: none !important;
+		border:2px solid $border-color;
+	}
 }
 
 .chat-message {
