--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -176,8 +176,9 @@ body {
 #user-box {
   height:25%;
   padding:0.5em;
-  overflow-y: auto;
+  overflow:hidden;
   position: relative;
+  font-size: 1vw;
   h1 {
     font-size:3vw;
     color:white;
