--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -24,6 +24,7 @@ $shadow-alpha-main: 0.85;
 .full-height {
   height: 100%;
   min-height: 100%;
+  max-height: 100%;
 }
 
 html {
@@ -54,18 +55,21 @@ body {
   margin:0;
   padding:0;
 
+  overflow: hidden;
+
   h1 {
-    font-size: 4vw;
+    float:left;
+    font-size: 3vw;
     color: white;
     margin:0;
     padding:0.25em;
   }
 
   h3 {
-    padding-left:0.75em;
     font-size: 2vw;
+    float:right;
     color:white;
-    margin:0;
+    margin:.25em .25em 0 0;
   }
 }
 
@@ -84,6 +88,7 @@ body {
 
 #control-pane {
   @include rounded(0, 1em, 0em, 1em);
+  @extend .full-height;
 
   border:1px solid $border-color;
   border-left:none;
@@ -96,8 +101,6 @@ body {
   height:100%;
 
   display:table;
-
-  overflow: hidden;
 
   li {
     display:table-row;
@@ -120,6 +123,7 @@ body {
 }
 
 #document-col {
+  @extend .full-height;
 	padding:0 1em;
 	margin:0;
   height:100%;
@@ -134,6 +138,12 @@ body {
   //@include shadow(1px, 1px, 3px, 0px, $shadow-alpha-main);
   @include rounded(1em, 1em, 1em, 1em);
   border:1px solid $border-color;
+
+  -moz-tab-size:2;
+  tab-size:2;
+
+  font-family: monospace;
+  font-size: 1.25vw;
 
   white-space: pre;
   word-wrap: normal;
@@ -174,26 +184,55 @@ body {
 }
 
 #user-box {
-  height:25%;
-  padding:0.5em;
+  height:35%;
   overflow:hidden;
   position: relative;
-  font-size: 1vw;
+  padding:0;
+  margin:0;
+
   h1 {
     font-size:3vw;
     color:white;
     padding:0;
     margin:0;
+    text-align: center;
+  }
+
+}
+
+#name-box {
+  overflow: hidden;
+  p {
+    width:35%;
+    margin:0;
+    padding:2px;
+
+    float:left;
+
+    font-size: 1.25vw;
+    text-align: right;
+  }
+
+  input {
+    width:65%;
+    float:right;
+    border:1px solid $border-color;
+    font-size: 1.25vw;
   }
 }
 
 #user-list {
-  height:calc(100% - 40px); // hacky bs
+  padding-left:0.5em;
+  height:75%;
   overflow-y: auto;
+  .user {
+    font-size: 1.75vw;
+    color:white;
+  }
 }
 
 #chat-box {
-  height:75%;
+  height:65%;
 }
 
 #chat-window {
