--- a/public/css/test.scss
+++ b/public/css/test.scss
@@ -191,7 +191,7 @@ body {
   margin:0;
 
   h1 {
-    font-size:3vw;
+    font-size:2vw;
     color:white;
     padding:0;
     margin:0;
@@ -205,11 +205,11 @@ body {
   p {
     width:35%;
     margin:0;
-    padding:2px;
+    padding:2px 4px 2px 0;
 
     float:left;
 
-    font-size: 1.25vw;
+    font-size: 1vw;
     text-align: right;
   }
 
@@ -217,7 +217,7 @@ body {
     width:65%;
     float:right;
     border:1px solid $border-color;
-    font-size: 1.25vw;
+    font-size: 1vw;
   }
 }
 
